# Boolean-Tile

./: .gitignore  3var_ifs_surfaces.html  Bloch.html  Boolean Tesseract.html  Boolean Tile Basis.html  Continuum Conjecture.md  FINDINGS.md  Fractal Shepard.html  Pure Łukasiewicz Dualists.html  README.md  Self-reference and chaos in fuzzy logic.md  Self-reference as generator.md  The_Boolean_Tile_Basis_April2026.html  Waveforms.html  What the Liar taught.html  abstract.md  alt_su3_embedding.py  analysis_report.md  bloch_spherical_harmonics.py  boole_n1.py  boole_n3.py  bures_distance.py  chaotic_liar_1d.py  chaotic_liar_2d.py  chaotic_liar_3d.py  chaotic_liar_report.py  circuit_runner.html  cl4xcl4_pati_salam.py  cl8_gauge.py  convo bloch.md  decription.md  feedback-ukasiewicz-logic-on-the-bloch-sphere-polar-disk-2026-06-13.md  find_su2_embedding.py  find_su3_subalgebras.py  gen_tiles.py  gen_xor_shepard.py  grid_d1.b64  grid_d2.b64  grid_d7.b64  hierarchy_subsample.py  (+39 more)
archive/: Bloch Purity docs.html  Polar IFS.html  speculations.md
docs/: BTB IFS Waveform.html  BTB IFS.html  Boolean Tile Basis.html  Polar IFS.html  index.html  (+8 more)
whff/: README.md  pyproject.toml
whff/src/whff/: __init__.py  addressing.py  algebra.py  bitstream.py  decoder.py  encoder.py  spec.py  tiles.py
whff/src/whff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
whff/src/whff/projections/: __init__.py  geometric.py  spatial.py  spectral.py
whff/tests/: test_addressing.py  test_algebra.py  test_bitstream.py  test_chirality.py  test_integration.py  test_spec.py  test_tiles.py
(+15 files in other folders)
